# DIP-Control

./: .gitignore  CMakeLists.txt  EOMDerivation.py  README.md
src/: DIP.cpp  DIP.h  LQR.cpp  LQR.h  main.cpp
test/: DIP_test.cpp  LQR_test.cpp
